<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/>
    </parent>

    <groupId>com.rxas400adm</groupId>
    <artifactId>rxas400adm-backend</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>rxas400adm-backend</name>
    <description>RXAS400 - Enterprise IBM i Operation Platform (Backend)</description>

    <modules>
        <module>rxas400adm-common</module>
        <module>rxas400adm-system</module>
        <module>rxas400adm-security</module>
        <module>rxas400adm-as400</module>
        <module>rxas400adm-operation</module>
        <module>rxas400adm-source</module>
        <module>rxas400adm-monitor</module>
        <module>rxas400adm-quality</module>
        <module>rxas400adm-cost</module>
        <module>rxas400adm-mrp</module>
        <module>rxas400adm-tpm</module>
        <module>rxas400adm-edi</module>
        <module>rxas400adm-olap</module>
        <module>rxas400adm-app</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <jjwt.version>0.12.6</jjwt.version>
        <jt400.version>11.0</jt400.version>
        <maven.compiler.parameters>true</maven.compiler.parameters>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-system</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-as400</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-source</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-monitor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-operation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-quality</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-cost</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-mrp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-tpm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-edi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rxas400adm</groupId>
                <artifactId>rxas400adm-olap</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>net.sf.jt400</groupId>
                <artifactId>jt400</artifactId>
                <version>${jt400.version}</version>
            </dependency>
            <!-- OpenAPI 注解（各模块 Controller 用 @Tag/@Operation） -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>2.6.0</version>
            </dependency>
            <!-- 限流 Bucket4j -->
            <dependency>
                <groupId>com.bucket4j</groupId>
                <artifactId>bucket4j-core</artifactId>
                <version>8.10.1</version>
            </dependency>
            <!-- 报表引擎：Excel 导出 -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>5.2.5</version>
            </dependency>
            <!-- 报表引擎：PDF 导出（OpenPDF，iText 2.x 维护分支） -->
            <dependency>
                <groupId>com.github.librepdf</groupId>
                <artifactId>openpdf</artifactId>
                <version>1.3.30</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>